[package]
name = "libuio"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-utils = { version = "~0.8" }
futures = { version = "~0.3" }
io-uring = { version = "~0.6" }
lazy_static = { version = "~1.5" }
nix = { version = "~0.29", features = ["net", "socket"] }
num_cpus = { version = "~1.16" }
slab = { version = "~0.4" }
thiserror = { version = "~1.0" }
thread_local = { version = "~1.1" }
tracing = { version = "~0.1" }

[dev-dependencies]
tracing-subscriber = "0.3"
